# dnse-emailotp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
docs/journals/: 2026-04-02-scaffold-and-listener.md
scripts/: example-listen-parse-print-otp.py  test-imap-listener.py
src/dnse_email_otp/: __init__.py  helper.py  listener.py  models.py  parser.py
tests/: conftest.py  test_helper.py  test_imports.py  test_listener.py  test_models.py  test_parser.py  test_stubs.py
