[project]
name = "dnse-emailotp"
dynamic = ["version"]
description = "Gmail OTP retrieval via IMAP IDLE for DNSE"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
authors = [{ name = "DNSE", email = "tech@dnse.com.vn" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]

requires-python = ">=3.10"
dependencies = ["imapclient>=2.3"]

[project.urls]
Homepage = "https://github.com/dnse-tech/dnse-emailotp"
Repository = "https://github.com/dnse-tech/dnse-emailotp"
Issues = "https://github.com/dnse-tech/dnse-emailotp/issues"

[project.optional-dependencies]
dnse = ["dnse"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/dnse_email_otp"]

[tool.hatch.build.hooks.vcs]
version-file = "src/dnse_email_otp/_version.py"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/dnse_email_otp/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D", "S"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "D", "E501", "F841"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportMissingTypeStubs = "none"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
reportUnusedVariable = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
